--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ body{
 }
 
 .navbar a{
+    padding: 10px;
+    position: relative;
     color: #FFF;
     font-size: 16px;
     text-decoration: none;
@@ -98,10 +100,14 @@ body{
     margin-bottom: 30px;
 }
 
-#internship, #achievement{
+#internship, #achievement, #research{
     position: relative;
     color: #FFF;   
     text-align: center;
+}
+
+#internship{
+    margin-top: 50px;
 }
 
 .section-title{
@@ -123,7 +129,22 @@ body{
     background: radial-gradient(50% 50% at 50% 50%, #763CAC 0%, rgba(50, 15, 133, 0.00) 100%);
 }
 
-.intern-cards, .achievement-cards{
+.middle-gradient{
+    width: 425px;
+    height: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    flex-shrink: 0;
+    position: absolute;
+    border-radius: 700px;
+    background: radial-gradient(50% 50% at 50% 50%, #763CAC 0%, rgba(50, 15, 133, 0.00) 100%);
+}
+
+.intern-cards, .achievement-cards, .research-cards{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -143,7 +164,7 @@ body{
     border-top: 5px solid #4F228D;
 }
 
-.intern-dur{
+.intern-dur, .project-decision{
     position: absolute;
     right: 20px;
     top: 10px;
@@ -152,7 +173,7 @@ body{
     box-shadow: 4px 7px 26px 0px rgba(0, 0, 0, 0.12);
 }
 
-.intern-dur:nth-child(odd){
+.intern-dur:nth-child(odd), .project-decision{
     background: linear-gradient(298deg, #130428 -93.07%, #251043 -38.94%, #38126D 5.82%, #261045 62.03%, #190634 92.21%);
 }
 
@@ -182,7 +203,7 @@ body{
     flex-wrap: wrap;
 }
 
-.intern-highlight span{
+.intern-highlight span, .project-highlight{
     font-family: 'Mooli', sans-serif;
     font-size: 0.8rem;
     padding: 5px 10px;
@@ -328,6 +349,11 @@ body{
     background: radial-gradient(50% 50% at 50% 50%, #763CAC 0%, rgba(50, 15, 133, 0.00) 100%);
 }
 
+.right-gradient-even{
+    left: 260px;
+    right: 0;
+}
+
 .project-block-odd span, .project-block-even span{
     color: #9857D3;
 }
@@ -461,5 +487,95 @@ body{
 }
 
 ::placeholder{
+    color: #FFF;
+}
+
+#research{
+    position: relative;
+}
+
+.research-card{
+    margin-bottom: 20px;
+    position: relative;
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 15px;
+    background: linear-gradient(110deg, #130428 19.95%, #251043 67.64%, #38126D 107.08%, #261045 156.61%, #190634 183.21%);
+    box-shadow: 4px 7px 26px 0px rgba(0, 0, 0, 0.12);
+    border-top: 5px solid #4F228D;
+}
+
+.research-illustrator{
+    max-width: 300px;
+    max-height: 300px;
+    margin-right: 30px;
+}
+
+.research-card div{
+    text-align: left;
+}
+
+.research-card h2{
+    width: 650px;
+    line-height: 1.8rem;
+    margin-bottom: 10px;
+}
+
+.research-card p{
+    width: max-content;
+    margin: 10px 0;
+}
+
+.research-additional{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.github-code{
+    width: max-content;
+    color: #fff;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-family: 'Mooli', sans-serif;
+    font-size: 0.8rem;
+    padding: 5px 10px;
+    border-radius: 10px;
+    border: 1px solid #693B93;
+    background-color: #2C1250;
+}
+
+.github-icon{
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
+
+.github-code-02{
+    margin-top: 10px;
+    width: max-content;
+    color: #fff;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-family: 'Mooli', sans-serif;
+    font-size: 0.8rem;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid #693B93;
+    background-color: #2C1250;
+}
+
+.github-code-02 img{
+    width: 30px;
+    height: 30px;
+    margin: 0 15px 0 0;
+}
+
+.github-code-02 span{
     color: #FFF;
 }
