--- a/styles.css
+++ b/styles.css
@@ -483,7 +483,9 @@ body{
 
 .project-0{
     background: url('assests/project-DDRF.png');
-    background-size: 100% 100%;
+    background-size: 90% 90%;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 .project-2{
