--- a/styles.css
+++ b/styles.css
@@ -403,8 +403,8 @@ body{
     margin: 10px 0px 0px 0px;
 }
 
-.achievement-desc-content h4{
-    margin: 10px 0px 0px 0px;
+.achievement-desc-content h6{
+    margin: 0px;
 }
 
 .achievement-desc-content p:not(.certificate p){
