--- a/styles.css
+++ b/styles.css
@@ -164,10 +164,10 @@ body{
 
 .middle-gradient{
     width: 425px;
-    height: 700px;
+    height: 425px;
     margin-left: auto;
     margin-right: auto;
-    bottom: 0;
+    bottom: 20px;
     left: 0;
     right: 0;
     z-index: -1;
@@ -192,6 +192,7 @@ body{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    column-gap: 30px;
 }
 
 .intern-cards, .grade-cards{
