--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,22 @@ body{
     height: 425px;
     margin-left: auto;
     margin-right: auto;
+    top: 50%;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    text-align: center;
+    flex-shrink: 0;
+    position: absolute;
+    border-radius: 700px;
+    background: radial-gradient(50% 50% at 50% 50%, #763CAC 0%, rgba(50, 15, 133, 0.00) 100%);
+}
+
+.end-gradient{
+    width: 425px;
+    height: 425px;
+    margin-left: auto;
+    margin-right: auto;
     bottom: 20px;
     left: 0;
     right: 0;
@@ -851,4 +867,14 @@ body{
     z-index: 0;
     background: #693b9345;
     transition: 0.25s ease-out;
+}
+
+.end-container{
+    text-align: center;
+    width: 100%;
+    margin: 50px auto 20px;
+    padding-top: 10px;
+    border-top: 2px solid white;
+    font-family: 'Mooli', sans-serif;
+    font-size: 1.3rem;
 }
