--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,18 @@ body{
     background: #11071F;
 }
 
+/* .hidden {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s ease, visibility 0s linear 1s;
+}
+
+.fade-in {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1s ease, visibility 0s linear 0s;
+} */
+
 .navbar{
     position: relative;
     padding: 0 30px;
@@ -749,6 +761,7 @@ body{
     flex-wrap: wrap;
     column-gap: 40px;
     row-gap: 40px;
+    padding: 0px 40px;
 }
 
 .work-card{
@@ -877,4 +890,27 @@ body{
     border-top: 2px solid white;
     font-family: 'Mooli', sans-serif;
     font-size: 1.3rem;
+}
+
+#back-to-top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 80px;
+    height: 80px;
+    background: radial-gradient(50% 50% at 50% 50%, #763CAC 50%, rgba(50, 15, 133, 0.00) 100%);
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0.5;
+    z-index: 4;
+    transition: opacity 0.2s ease-in-out;
+}
+  
+#back-to-top:hover {
+    opacity: 0.8;
 }
